--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "matplotlib",
     "pandas",
     "pylatexenc",
+    "qiskit-aer",
     "qiskit-qasm3-import",
     "h5py",
 ]
